--- a/src/app/staff/staff.component.scss
+++ b/src/app/staff/staff.component.scss
@@ -80,5 +80,29 @@ mat-drawer-content {
   margin:0px 30px 40px 20px;
   width:65%;
   display:inline-block;
-  
+
 }
+
+.header-row-container {
+  overflow-x: auto;
+}
+
+// .column-container {
+//   min-width: 120px;
+//   background: white;
+//   border-right: 1px solid #ddd;
+// }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
