--- a/src/app/staff/staff.component.html
+++ b/src/app/staff/staff.component.html
@@ -1,108 +1,1268 @@
 <mat-drawer-container class="example-container">
 
 
-          <div class="homdash" style="margin-bottom:10px"> 
+          <div class="homdash" style="margin-bottom:10px">
             <h1 style="color:dark-grey; display:inline">Staff</h1>
             <div style="padding-top:5px">
               <a style="margin-right:5px"href='./dashboard'>Home</a>
               <span style="margin-right:15px">/ Staff</span>
             </div>
           </div>
-        
+
+          <hr style="margin-bottom:30px">
 
 
 <mat-drawer #drawer class="sid" mode="side" opened>
-      <mat-toolbar color="primary">
-        <mat-icon fontIcon="school"></mat-icon>
-        <span>ABC School</span>
-      </mat-toolbar>
+  <mat-toolbar color="primary">
+    <mat-icon fontIcon="school"></mat-icon>
+    <span>ABC School</span>
+  </mat-toolbar>
 
-    <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link" >
-        <div style="display: flex; align-items: center;">
-          <mat-icon>dashboard</mat-icon>
-          <span class="nav-text">Dashboard</span>
-        </div>
-      </a>
-      <a mat-list-item routerLink="/student" routerLinkActive="active-link">
-        <div style="display: flex; align-items: center;">
+  <mat-nav-list>
+
+    <!-- All roles can access dashboard -->
+    <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">
+      <div style="display: flex; align-items: center;">
+        <mat-icon>dashboard</mat-icon>
+        <span class="nav-text">Dashboard</span>
+      </div>
+    </a>
+
+    <!-- Admin and Student -->
+    <a *ngIf="role === 'admin' || role === 'student'" mat-list-item routerLink="/student" routerLinkActive="active-link">
+      <div style="display: flex; align-items: center;">
         <mat-icon>people</mat-icon>
         <span class="nav-text">Students</span>
-        </div>
-      </a>
+      </div>
+    </a>
 
-      <a mat-list-item routerLink="/staff" routerLinkActive="active-link">
-        <div style="display: flex; align-items: center;">
-        <mat-icon>person</mat-icon>
-        <span class="nav-text">Staff</span>
-        </div>
-      </a>
+    <!-- Admin and Staff -->
+ <a *ngIf="role && (role === 'admin' || role === 'staff')" 
+   mat-list-item 
+   routerLink="/staff" 
+   routerLinkActive="active-link">
+  <div style="display: flex; align-items: center;">
+    <mat-icon>person</mat-icon>
+    <span class="nav-text">Staff</span>
+  </div>
+</a>
 
-      <a mat-list-item routerLink="/attendance" routerLinkActive="active-link">
-        <div style="display: flex; align-items: center;">
+
+    <!-- Admin only -->
+    <a *ngIf="role === 'admin'" mat-list-item routerLink="/attendance" routerLinkActive="active-link">
+      <div style="display: flex; align-items: center;">
         <mat-icon>event</mat-icon>
         <span class="nav-text">Attendance</span>
-        </div>
-      </a>
+      </div>
+    </a>
 
-      <a mat-list-item routerLink="/reports" routerLinkActive="active-link">
-        <div style="display: flex; align-items: center;">
+    <a *ngIf="role === 'admin'" mat-list-item routerLink="/reports" routerLinkActive="active-link">
+      <div style="display: flex; align-items: center;">
         <mat-icon>bar_chart</mat-icon>
         <span class="nav-text">Reports</span>
-        </div>
-      </a>
-    </mat-nav-list>
-  </mat-drawer>
+      </div>
+    </a>
+
+  </mat-nav-list>
+</mat-drawer>
+
   <mat-drawer-content style="background-color:lightgreen">
 
     <app-header> </app-header>
-    
+
           <!-- //////////  this is home/ dashboard //////////////////////////////////////////////////////////////////////////////////////-->
-          <div class="homdash" style="margin-bottom:10px"> 
+          <div class="homdash" style="margin-bottom:10px">
             <h1 style="color:dark-grey; display:inline">Staff</h1>
             <div style="padding-top:5px">
               <a style="margin-right:5px"href='./dashboard'>Home</a>
               <span style="margin-right:15px">/ Staff</span>
             </div>
           </div>
+
+
         <div class="table">
-          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<!-- Table with drag-and-drop columns -->
+   <!-- Drag-Drop for Column Headers (above the table) -->
+<div
+  class="mat-header-row cdk-drop-list"
+  cdkDropList
+  [cdkDropListData]="displayedColumns"
+  cdkDropListOrientation="horizontal"
+  (cdkDropListDropped)="dropcolumn($event)"
+  style="display: flex; background: #f5f5f5; font-weight: bold; padding: 8px; ">
 
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+  <div
+    *ngFor="let column of displayedColumns"
+    class="mat-header-cell"
+    cdkDrag
+    style="flex: 1; cursor: move; padding: 8px; overflow-x:auto">
+    {{ column | titlecase }}
+  </div>
+</div>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="id">
-    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+<!-- Main Table with Row Drag -->
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" cdkDropList (cdkDropListDropped)="dropRow($event)" [cdkDropListData]="dataSource">
+
+  <!-- Dynamically Generate Columns -->
+  <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+    <th mat-header-cell *matHeaderCellDef> {{ column | titlecase }} </th>
+    <td mat-cell *matCellDef="let element"> {{ element[column] }} </td>
   </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="grade">
-    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Standard </th>
-    <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="subject">
-    <th style="background-color:#3f51b5" mat-header-cell *matHeaderCellDef> Subject </th>
-    <td mat-cell *matCellDef="let element"> {{element.subject}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <!-- Row Definitions -->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns" style="display:none"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns"
+    cdkDrag
+    [cdkDragData]="row"
+    style="cursor: move; position:relative">
+  </tr>
 </table>
 
 
+
         </div>
-    
+
   </mat-drawer-content>
 <mat-drawer-container>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
